--- a/ofdm_using_python.ipynb
+++ b/ofdm_using_python.ipynb
@@ -659,15 +659,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fortunately, no bit error occured and the transmission was successful (Reduce the SNR to get some bit errors)"
+    "Fortunately, no bit error occured and the transmission was successful.\n",
+    "Reduce the SNR to get bit error. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
